--- a/src/app/views/web-checkout/components/payment-form-sandbox/payment-form-sandbox.component.html
+++ b/src/app/views/web-checkout/components/payment-form-sandbox/payment-form-sandbox.component.html
@@ -365,7 +365,7 @@
           placeholder="Response url"
           name="responseUrl"
           type="text"
-          value=""
+          value="https://payments-1001-angular.web.app/web-checkout-response"
           required
         />
         <mat-error> Response url is<strong>required.</strong> </mat-error>
