--- a/src/app/views/web-checkout/components/payment-form-production/payment-form-production.component.html
+++ b/src/app/views/web-checkout/components/payment-form-production/payment-form-production.component.html
@@ -378,7 +378,7 @@
           placeholder="Confirmation url"
           name="confirmationUrl"
           type="text"
-          value=""
+          value="https://5bb9f92041d902192de31554e65bafe4.m.pipedream.net"
           required
         />
         <mat-error> Confirmation url is<strong>required.</strong> </mat-error>
