--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,12 +1,15 @@
-<div class="footer-layoud">
-  <footer>
-    <div class="container">
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-      />
-      <a href="https://github.com/" class="fa fa-github"></a>
-      <a href="https://github.com/Oromeror/payments">GitHub Repository</a>
-    </div>
-  </footer>
-</div>
+<footer>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+  />
+  <a href="https://github.com/" class="fa fa-github"></a>
+
+  <a href="https://github.com/Oromeror/payu_payments_front_end"
+    >Front-end Repository
+  </a>
+
+  <a href="https://github.com/Oromeror/payu_payments_back_end"
+    >Back-end Repository</a
+  >
+</footer>
