--- a/src/app/views/home/components/home/home.component.css
+++ b/src/app/views/home/components/home/home.component.css
@@ -1,27 +1,35 @@
 .main-container {
-    margin: 0 auto;
-    max-width: 480px;
-    background-color: #F5F5F7;
-    border: 1px solid #ddd;
-    padding: 20px;
-    display: block;
-    width: 80%;
-    border-radius: 6px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
-    place-content: center;
-  }
-  .urls {
-    margin: 0 0.5em;
-    color: skyblue;
-    padding: 5px;
-    font-size: medium;
-    font-weight: 300;
-    text-decoration: none;
-  }
+  margin: 0 auto;
+  max-width: 480px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  background-color: #F5F5F7;
+  border: 1px solid #ddd;
+  padding: 20px;
+  display: block;
+  width: 80%;
+  border-radius: 6px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
+  place-content: center;
+}
 
-  .urls:hover {
-    cursor: pointer;
-  }
+.urls {
+  margin: 0 0.5em;
+  color: skyblue;
+  padding: 5px;
+  font-size: medium;
+  font-weight: 300;
+  text-decoration: none;
+}
 
- 
-  
+.urls:hover {
+  cursor: pointer;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  align-content: stretch;
+  justify-content: flex-start;
+}
