--- a/src/app/views/web-checkout-response/components/response/response.component.html
+++ b/src/app/views/web-checkout-response/components/response/response.component.html
@@ -6,8 +6,7 @@
     <mat-card-content>
       <mat-list>
         <mat-list-item *ngFor="let response of responses">
-          <span style="font-weight: bold"> {{ response.fieldName }} </span>
-          : {{ response.fieldValue }}
+          {{ response.fieldName }} : {{ response.fieldValue }}
         </mat-list-item>
       </mat-list>
     </mat-card-content>
