--- a/src/app/views/web-checkout/components/signature/signature.component.html
+++ b/src/app/views/web-checkout/components/signature/signature.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="signature-div">
   <form [formGroup]="signatureForm" (ngSubmit)="createSignature($event)">
     <mat-card>
       <mat-card-header>
