--- a/src/app/views/web-checkout/web-checkout/web-checkout.component.html
+++ b/src/app/views/web-checkout/web-checkout/web-checkout.component.html
@@ -1,6 +1,6 @@
 <!-- <app-payment-form></app-payment-form> -->
 
-<mat-tab-group mat-align-tabs="center">
+<mat-tab-group animationDuration="1000ms" mat-align-tabs="center">
   <mat-tab label="Signature"><app-signature></app-signature></mat-tab>
   <mat-tab label="Sandbox"
     ><app-payment-form-sandbox></app-payment-form-sandbox
