--- a/src/app/views/web-checkout-response/components/response/response.component.css
+++ b/src/app/views/web-checkout-response/components/response/response.component.css
@@ -22,8 +22,15 @@ body {
     white-space: pre-wrap;
 }
 
+
+.no-wrap {
+    word-wrap: break-word;
+    white-space: pre-wrap;
+}
+
 mat-card {
     padding: 1em;
+    margin-bottom: 7em;
     width: min-content;
     color: skyblue;
     background-color: white;
@@ -62,12 +69,10 @@ mat-card-header {
 
 @media only screen and (max-width: 600px) {
 
-
 span {
     display: none;
     }
 }
-
 .currency-icon {
     vertical-align: super;
 }
@@ -97,12 +102,19 @@ mat-list {
     word-break: break-word;
     width: 50vw;
     color: black;
-}
+  }
 
 .mat-list-item mat-focus-indicator ng-star-inserted {
+
   height: fit-content;
 }
 
 .mat-list-item-content{
   height: min-content;
+}
+
+.mat-list-base .mat-list-item, .mat-list-base .mat-list-option {
+  height: fit-content;
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
