--- a/src/app/views/web-checkout/components/signature/signature.component.css
+++ b/src/app/views/web-checkout/components/signature/signature.component.css
@@ -4,8 +4,13 @@
     align-items: flex-start;
 }
 
-div {
+.signature-div {
     padding: 0.5em;
+    text-align: -webkit-center;
+}
+
+body {
+    background: whitesmoke;
 }
 
 .mat-list-item-content {
@@ -15,15 +20,6 @@ div {
 .no-wrap {
     word-wrap: break-word;
     white-space: pre-wrap;
-}
-
-form {
-    background-color: none;
-    text-align: -webkit-center;
-}
-
-body {
-    background: whitesmoke;
 }
 
 mat-card {
@@ -69,15 +65,16 @@ mat-form-field {
     color: black;
 }
 
-button {
-    color: white;
-    background-color: skyblue;
-}
-
 @media only screen and (max-width: 600px) {
+
+span {
+  display: none;
+  }
 
 form {
     position: relative;
+    background-color: none;
+    text-align: -webkit-center;
 }
 
 button {
@@ -85,11 +82,9 @@ button {
     justify-content: center;
     align-items: center;
     position: relative;
+    color: white;
+    background-color: skyblue;
 }
-
-span {
-    display: none;
-    }
 }
 
 .currency-icon {
@@ -121,12 +116,19 @@ mat-list {
     word-break: break-word;
     width: 50vw;
     color: black;
-}
+  }
 
 .mat-list-item mat-focus-indicator ng-star-inserted {
+
   height: fit-content;
 }
 
 .mat-list-item-content{
   height: min-content;
+}
+
+.mat-list-base .mat-list-item, .mat-list-base .mat-list-option {
+  height: fit-content;
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
