--- a/src/app/views/paymentsos-secure-fields-form/components/paymentsos-secure-fields-form/paymentsos-secure-fields-form.component.html
+++ b/src/app/views/paymentsos-secure-fields-form/components/paymentsos-secure-fields-form/paymentsos-secure-fields-form.component.html
@@ -46,7 +46,7 @@
             mat-raised-button
             type="submit"
           >
-            Pay
+            Add card
           </button>
         </mat-card-actions>
         </mat-card-content>
