--- a/src/app/views/web-checkout/web-checkout/web-checkout.component.html
+++ b/src/app/views/web-checkout/web-checkout/web-checkout.component.html
@@ -1,7 +1,7 @@
 <!-- <app-payment-form></app-payment-form> -->
+<app-signature></app-signature>
 
 <mat-tab-group animationDuration="1000ms" mat-align-tabs="center">
-  <mat-tab label="Signature"><app-signature></app-signature></mat-tab>
   <mat-tab label="Sandbox"
     ><app-payment-form-sandbox></app-payment-form-sandbox
   ></mat-tab>
