--- a/src/app/views/paymentsos-secure-fields-form/components/paymentsos-secure-fields-form/paymentsos-secure-fields-form.component.css
+++ b/src/app/views/paymentsos-secure-fields-form/components/paymentsos-secure-fields-form/paymentsos-secure-fields-form.component.css
@@ -1,14 +1,14 @@
 .field {
   text-align: -webkit-left;
   justify-content: space-between;
-  width: 100%;
   border: 1px solid #d9d9d9;
   color: rgb(12, 43, 67);
   border-radius: 4px;
-  padding: 1em 0 1em 0;
   margin-bottom: 1.5em;
+  margin-top: -0.25em;
+  position: relative;
+  padding: 1em .50em 1em .50em;
 }
-
 
 :host {
   justify-content: center;
@@ -18,6 +18,11 @@
 .secure-fields-form-div {
   padding: 0.5em;
   text-align: -webkit-center;
+  word-break: break-word;
+}
+
+form {
+  padding: 2%;
 }
 
 body {
@@ -27,7 +32,7 @@ body {
 mat-card {
   margin: 0 auto;
   max-width: 480px;
-  background-color: #f5f5f7;
+  background-color: white;
   border: 1px solid #ddd;
   padding: 20px;
   display: block;
