--- a/src/app/views/paymentsos-one-step/components/token/token.component.css
+++ b/src/app/views/paymentsos-one-step/components/token/token.component.css
@@ -14,7 +14,7 @@
   align-items: flex-start;
 }
 
-.secure-fields-form-div {
+.create-token-form-div {
   padding: 0.5em;
   text-align: -webkit-center;
 }
