--- a/src/app/views/paymentsos-secure-fields-form/components/paymentsos-secure-fields-form/paymentsos-secure-fields-form.component.html
+++ b/src/app/views/paymentsos-secure-fields-form/components/paymentsos-secure-fields-form/paymentsos-secure-fields-form.component.html
@@ -72,6 +72,7 @@
             placeholder="John Doe"
             matInput
             type="text"
+            onkeypress="return /[a-zA-Z\s]/i.test(event.key)"
           />
           <mat-icon matSuffix>person</mat-icon>
           <mat-error>
