--- a/src/app/views/generic-response-page/components/generic-response-page/generic-response-page.component.html
+++ b/src/app/views/generic-response-page/components/generic-response-page/generic-response-page.component.html
@@ -1,11 +1,9 @@
-<div>
 <mat-card>
   <mat-card-header>
     <mat-card-title>Response page</mat-card-title>
     <mat-card-subtitle>Query Params</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <mat-form-field>{{queryParams}}</mat-form-field>
+    <div>{{queryParams}}</div>
   </mat-card-content>
 </mat-card>
-</div>
