--- a/src/app/views/generic-response-page/components/generic-response-page/generic-response-page.component.html
+++ b/src/app/views/generic-response-page/components/generic-response-page/generic-response-page.component.html
@@ -4,6 +4,25 @@
     <mat-card-subtitle>Query Params</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <div>{{queryParams}}</div>
+    <table mat-table [dataSource]="dataSource">
+      <!-- Parameter Column -->
+      <ng-container matColumnDef="parameter">
+        <th mat-header-cell *matHeaderCellDef class="center">
+          <strong>Parameter</strong>
+        </th>
+        <td mat-cell *matCellDef="let param" class="param">{{ param.key }}</td>
+      </ng-container>
+
+      <!-- Value Column -->
+      <ng-container matColumnDef="value">
+        <th mat-header-cell *matHeaderCellDef class="center">
+          <strong>Value</strong>
+        </th>
+        <td mat-cell *matCellDef="let param">{{ param.value }}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
   </mat-card-content>
 </mat-card>
